# msv2-api

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  pyproject.toml  test_db_conn.py
.github/workflows/: build-and-deploy-to-docker-hub.yaml  ci-cd.yaml  tests.yaml
.kiro/specs/music-curator-agent/: design.md  (+4 more)
api/: main.py
api/agents/: docs_langgraphV1.md
api/connectors/: postgres_connector.py
api/core/: config.py  cors.py  db_codecs.py  dependencies.py  exceptions.py  lifespan.py  logger.py  security.py
api/handlers/: agent.py  auth.py  coordinates.py  discovery.py  discovery_centroids.md  favorites.py  inference.py  library.py  media.py  metadata.py  music.py  music_db.py  music_storage.py  objects.py  playlists.py
api/models/: agent.py  auth.py  coordinates.py  discovery.py  favorites.py  inference.py  library.py  metadata.py  music.py  music_db.py  music_storage.py  requests.py  responses.py
api/repositories/: auth.py  auth_repo.py  coordinates.py  database.py  discovery.py  favorites.py  inference.py  library.py  media.py  metadata.py  music_db.py  music_repo.py  music_storage.py  objects.py  playlists.py
api/routers/: agent.py  auth.py  coordinates.py  discovery.py  downloads.py  favorites.py  health.py  inference.py  library.py  media.py  metadata.py  music.py  music_db.py  music_storage.py  objects.py  playlists.py
tests/: conftest.py  manual_agent_test.py  manual_agent_test_v3.py  run_agent_cli.py  test_auth.py  test_integration.py  test_integration_v3.py  test_supervisor.py  test_supervisor_v3.py  test_tools.py  test_tools_v3.py
(+40 files in other folders)
