[project]
name = "msv2-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "minio>=7.2.18",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.0.0",
    "isort>=7.0.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
